# temp_horu

./: .dockerignore  .gitignore  Dockerfile  README.md  RESULTS.md  experiment_common.py  hardware_energy.py  hd_reconstruction_runtime.py  pyproject.toml  run_hd_checkpoint_comparison.py  run_seven_dataset_benchmark.py
configs/: accuracy_full.yaml  accuracy_full_fedhdc_gpu.yaml  accuracy_full_gpu0_a.yaml  accuracy_full_gpu0_b.yaml  accuracy_full_gpu0_ninapro_horu_seed2.yaml  accuracy_full_gpu1_a.yaml  accuracy_full_gpu1_b.yaml  accuracy_full_gpu1_femnist_horu_seed2.yaml  accuracy_full_gpu1_ninapro_horu_seed1.yaml  accuracy_full_gpu1_wisdm.yaml  accuracy_github_canonical_seed13.yaml  accuracy_github_canonical_seed13_gpu0_femnist.yaml  accuracy_github_canonical_seed13_gpu0_synthetic.yaml  accuracy_github_canonical_seed13_gpu0_ucihar.yaml  accuracy_github_canonical_seed13_gpu1_isolet.yaml  accuracy_github_canonical_seed13_gpu1_ninapro.yaml  accuracy_github_canonical_seed13_gpu1_wisdm.yaml  accuracy_quick.yaml  accuracy_quick_fedhdc_hyperfeel.yaml  accuracy_ucihar_fedhdc_seed0.yaml  accuracy_ucihar_horu_bootstrap_seed0.yaml  accuracy_ucihar_horu_seed0.yaml  accuracy_ucihar_hyperfeel_seed0.yaml  dataset_specs.json  datasets.yaml  fedhdc_ucihar_acceptance.yaml  fedhdc_ucihar_smoke.yaml  horu_ucihar_bootstrap_paper_rank.yaml  horu_ucihar_bootstrap_smoke.yaml  horu_ucihar_round_paper_rank.yaml  horu_ucihar_round_smoke.yaml  hyperfeel_ucihar_controlled.yaml  hyperfeel_ucihar_diagnostic_row_normalized.yaml  hyperfeel_ucihar_diagnostic_unit_update.yaml  hyperfeel_ucihar_smoke.yaml  (+8 more)
(+223 files in other folders)
