[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "horu-artifact"
version = "0.1.0"
description = "HoRU table and six-dataset reproduction artifact"
requires-python = ">=3.11"
dependencies = ["torch>=2.2", "PyYAML>=6.0", "scipy>=1.11"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
